# alex2

./: CMakeLists.template.txt  CMakeLists.txt
alexMain/: alexMain.cpp
base/: Alex.cpp  Alex.h  IAlgorithm.h  IData.h  ISvc.cpp  ISvc.h
cmake/Modules/: FindCLHEP.cmake  FindIrene.cmake  FindLog4CPP.cmake  FindPaolina.cmake  FindRecPack.cmake  FindTinyXML2.cmake
config/: AlexConfigure.cpp  AlexConfigure.h  DArray.cpp  DArray.h  DParam.h  xConfigure.cxx
example/: AConf.cxx  AConf.hh  AEx1.cpp  AEx1.hh  AEx1.xml  AEx2.cpp  AEx2.hh  AEx2.xml  AExample.cxx  AlexConfig.xml  AlgoConfig.xml  CMakeLists.txt  ExData.cpp  ExData.h
exampleAux/: AConf.cpp  AExample.h  AExampleAux.cpp
exampleConf/: CMakeLists.txt  exConfigure.cpp
exampleMain/: alexMainExample.cpp  exConfigure.cpp
irene/: AConf.cxx  AHits.cpp  AlexConfig.xml  AlgoAux.cxx  AlgoConfig.xml  CMakeLists.txt  IElectrons.cpp  IElectrons.hh  IElectrons.xml
ireneMain/: CMakeLists.txt  ireneMain.cpp
isvc/: Hit.cpp  Hit.h  IBeta.cpp  IBeta.h  IBlob.cpp  IBlob.h  IDefs.h  ISvc.cpp  ISvc.h  RBeta.cpp  RBeta.h
jjalgos/: AConf.cxx  AlexConfig.xml  AlgoConfig.xml  IElectrons.cpp  IElectrons.hh  IElectrons.xml  KalmanSetup.cpp  KalmanSetup.hh  KalmanSetup.xml  NConstructIBetas.hh  NConstructRBetas.cpp  NConstructRBetas.hh  NDrawEffHits.cpp  NDrawEffHits.hh  NSelectIBetas.hh
jralgos/: AHits.xml  AlexConfig.xml  AlgoConfig.xml  BlobRadius.cpp  BlobRadius.xml  KalmanSetup.cpp  KalmanSetup.xml  NConstructIBetas.cpp  NConstructIBetas.xml  NConstructRBetas.xml  NDrawEffHits.cpp  NDrawEffHits.xml  NSelectEnergy.cpp  NSelectEnergy.xml  NSelectIBetas.cpp  NSelectIBetas.xml  PElectrons.cpp  PElectrons.xml  PlotTracks.cpp  PlotTracks.xml
ksvc/: KFRecpack.h  KFSetup.cpp  KFSetup.h  KFSurfaceMaker.cpp  KFSurfaceMaker.h  KFSvc.cpp  KFSvc.h
pyscripts/: py_run  rp_cfmeans.py  rp_fitprof.py  rp_genplots.py  rp_gfit.py  rp_lvsh.py  rp_nvsp.py  rp_sevsbb.py  rp_trackdefs.py  rp_trackplot.py
test/: CMakeLists.txt  alexMainExample.cpp  mainAlexConfigure.cpp  testAlex.cpp  testAlexConfigure.cpp  testToyAnalysis.cpp  testXml.cpp
toy/: AlexConfig.xml  AlgoConfig.xml  AlgoConfig2.xml  ToyAnalysis.cpp  ToyAnalysis.h  ToyData.cpp  ToyData.h  ToyData.xml  test.xml
util/: SingletonTemplate.h  StringOperations.cpp  StringOperations.h
xml/: AlexConfig.xml  AlgoConfig.xml  ToyAnalysis.xml  ToyAnalysis2.xml
